@@ -79,6 +79,8 @@ class CJuiDatePicker extends CJuiInputWidget
 			$this->htmlOptions['id']=$id;
 		if(isset($this->htmlOptions['name']))
 			$name=$this->htmlOptions['name'];
+		else
+			$this->htmlOptions['name']=$name;
 
 		if ($this->flat===false)
 		{
@@ -104,8 +106,8 @@ class CJuiDatePicker extends CJuiInputWidget
 			if (!isset($this->options['onSelect']))
 				$this->options['onSelect']="js:function( selectedDate ) { jQuery('#{$id}').val(selectedDate);}";
 			
-			$this->htmlOptions['id'] = $id =  $this->htmlOptions['id'].'_container';
-			$this->htmlOptions['name']= $name = $this->htmlOptions['name'].'_container';
+			$this->htmlOptions['id'] = $id = $this->htmlOptions['id'].'_container';
+			$this->htmlOptions['name'] = $name = $this->htmlOptions['name'].'_container';
 
 			echo CHtml::tag('div', $this->htmlOptions);
 		}
