@@ -6,6 +6,7 @@ Version 1.1.6 to be released
 ----------------------------
 - Bug #1775: Fixed the bug that AR and Gii may fail for tables not in default schema in Oracle DB (Qiang)
 - Bug #1790: Fixed the bug that CJSON::encode may generate invalid encoding result when data contains float numbers (Qiang)
+- Bug #1799: Fixed the bug that CJuiDatepicker::$name may cause a PHP error (Y!!)
 - Enh #1785: Added CAssetManager::$excludeFiles property to support exclusion of irrelevant files from the publishing process (Y!!)
 - Bug: Fixed the bug that CActiveForm generates unnecessary js code about setting focus (Qiang)
 - New: Added query builder (Qiang)
